# lego-songbook

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  SECURITY.md  _config.yml  all-songs-by-key.md  all-songs-by-name.md  all-songs.md  noxfile.py  past-services.md  pyproject.toml  services.md  tasks.py
.github/workflows/: pre-commit-autoupdate.yml  tests.yml
_data/: past_services.yaml  services.yaml  songs.csv  songs_by_key.csv
_includes/: head.html
_layouts/: past-service.html
docs/: 404.html  CNAME  Gemfile  _LICENSE.md  _config.yml  all-songs-by-name.md  index.html  services.md
docs/.bundle/: config
docs/_data/: albums.csv  all_songs.csv  all_songs.xlsx  services.yaml  settings.yml  song_details.yaml  song_info.yaml  songs.csv  songs_all.csv
docs/_includes/: component__contact.html  component__post-preview.html  footer.html  header.html  section__about.html  sidebar 1.html
docs/_layouts/: default.html  post.html  project.html  song.html
docs/_posts/: 2021-9-27-爱中不惧怕.md
docs/_projects/: 2021-11-10-songbook-toc.md  2021-11-10-歌曲导航.md
docs/_sass/: _reset.scss
docs/blog/: index.html
docs/css/: style.scss
docs/js/: made-min.js  made.js  plugins-min.js  plugins.js
docs/services/: 2019-12-21.md  2019-12-22.md  2020-01-12.md
docs/song/: Hi Ne Ni.md  How Great Is Our God.md  I Believe.md  by-name.md  一生敬拜祢.md  一生爱祢.md  一粒麦子.md  万王之王 .md  万福泉源歌.md  三一来临歌.md  三博士歌.md  三百六十五天.md  上帝能够.md  中国的早晨五点钟.md  (+170 more)
services/: 2019-12-29.md  2020-01-05.md
tests/: __init__.py  test_cli.py  test_lego_manager.py  test_legoworship.py
(+12 files in other folders)
